<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:theme="@style/BlackSanUI.Button"
	tools:context=".FActivity">

	<TextView
		android:id="@+id/t_fops_opw"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_opw"
		android:padding="15dp"
		android:text="@string/open_with"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/t_fops_opw_sel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_opw_sel"
		android:padding="15dp"
		android:text="@string/open_as"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/t_fops_ynk"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_yks"
		android:padding="15dp"
		android:text="@android:string/copy"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/t_fops_kill"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_yks"
		android:padding="15dp"
		android:text="@android:string/cut"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/textView6"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_del"
		android:padding="15dp"
		android:text="@string/delete"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_editname"
		android:padding="15dp"
		android:text="@string/rename"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/t_fops_share"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_share"
		android:padding="15dp"
		android:text="@string/share"
		android:textAlignment="center" />

	<TextView
		android:id="@+id/textView9"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="m_fops_stat"
		android:padding="15dp"
		android:text="@string/stat"
		android:textAlignment="center" />
</LinearLayout>
