<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/colorLiiDark" android:layout_width="match_parent" android:layout_height="match_parent" android:elevation="15dp">
    <TextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/FName" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_name"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/textView13" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/FSize"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/textView_size" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unk"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/textView14" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/MDate"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/textView_date" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unk"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/textView15" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/MType"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/textView_MIME" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unk"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/textView10" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/file_info"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/textView_MInfo" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unk"/>
</LinearLayout>
