<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clipToPadding="false"
	android:fitsSystemWindows="true"
	android:nestedScrollingEnabled="true"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:orientation="vertical">

		<GridLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:columnCount="3"
			android:rowCount="3"
			android:theme="@style/media_cat">

			<LinearLayout
				android:layout_row="0"
				android:layout_column="0">

				<ImageButton
					android:id="@+id/imageButton"
					android:layout_width="54dp"
					android:layout_height="54dp"
					android:background="@drawable/bg_media_img"
					android:contentDescription="@string/images"
					android:src="@drawable/ic_img_prev" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/images" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="0"
				android:layout_column="1">

				<ImageButton
					android:id="@+id/imageButton2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_aud"

					android:contentDescription="@string/audio"
					android:src="@drawable/ic_aud_prev" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/audio" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="0"
				android:layout_column="2">

				<ImageButton
					android:id="@+id/imageButton3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_vid"

					android:contentDescription="@string/video"
					android:src="@drawable/ic_vid_prev" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/video" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="1"
				android:layout_column="0">

				<ImageButton
					android:id="@+id/imageButton4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_docs"

					android:contentDescription="@string/documents"
					android:src="@drawable/ic_file_prev" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/documents" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="1"
				android:layout_column="1">

				<ImageButton
					android:id="@+id/imageButton5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_fav"

					android:contentDescription="@string/favourites"
					android:src="@drawable/ic_favorites" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/favourites" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="1"
				android:layout_column="2">

				<ImageButton
					android:id="@+id/imageButton6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_recents"

					android:contentDescription="@string/recent"
					android:src="@drawable/ic_recents" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/recent" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="2"
				android:layout_column="0">

				<ImageButton
					android:id="@+id/imageButton7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_archives"

					android:contentDescription="@string/archives"
					android:src="@drawable/ic_archive_prev" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/archives" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="2"
				android:layout_column="1">

				<ImageButton
					android:id="@+id/imageButton8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_dwn"

					android:contentDescription="@string/dwn"
					android:src="@drawable/ic_dwn_prev" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/dwn" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout
				android:layout_row="2"
				android:layout_column="2">

				<ImageButton
					android:id="@+id/imageButton9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:background="@drawable/bg_media_encrypted"

					android:contentDescription="@string/encrypted"
					android:src="@drawable/ic_encrypted" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/encrypted" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
		</GridLayout>

		<TextView
			style="@style/StorageAL"
			android:layout_width="match_parent"
			android:layout_height="84dp"
			android:onClick="fic"
			android:text="@string/ins"
			android:textAlignment="center" />

		<LinearLayout
			style="@style/StorageAL"
			android:layout_width="match_parent"
			android:layout_height="84dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:onClick="m_storage_analyze"
				android:stateListAnimator="@animator/animate_lsview_selector"
				android:text="@string/storage_analyzer" />

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginTop="14dp"
				android:layout_marginBottom="14dp"
				android:background="@android:color/darker_gray" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:stateListAnimator="@animator/animate_lsview_selector"
				android:text="@string/trash" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>